--- a/business2/style.css
+++ b/business2/style.css
@@ -799,3 +799,9 @@ a#menu{display:none;}
   bottom: 0;
 }
 /* /18.06.02 フッターを固定にする */
+
+/* 18.06.02 audio関係 */
+#bg_music {
+  
+}
+/* 18.06.02 audio関係 */
