--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Varela+Round");
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
 html, body {
   width: 100%;
   height: 100%;
@@ -7,28 +7,24 @@ html, body {
 }
 
 body {
-  font-family: 'Varela Round', sans-serif;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
 }
 
 .container {
-  background-color: #cfcfcf;
+  background-color: #0C0c4d;
   min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .container .card {
-  border: solid 1px #0058a2;
-  margin: 20px;
-  overflow: hidden;
   display: flex;
   box-sizing: border-box;
-  border-radius: 8px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.7);
 }
 .container .card .card-header {
-  background-color: #229aff;
+  background-color: #0c56ab;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -38,14 +34,14 @@ body {
   height: 100px;
   margin: auto;
   border-radius: 50%;
-  box-shadow: 0 -1px #0066bb;
+  box-shadow: 0 -1px #05264c;
 }
 .container .card .card-header h3, .container .card .card-header p {
   color: #ffffff;
-  text-shadow: 0 -1px #0066bb;
+  text-shadow: 0 -1px #05264c;
 }
 .container .card .card-body {
-  color: #222222;
+  color: #444444;
   background-color: #ffffff;
   padding: 20px;
   box-sizing: border-box;
@@ -64,44 +60,54 @@ body {
   margin-bottom: 10px;
 }
 .stat-box h3 {
-  font-weight: normal;
   margin: 0;
 }
 .stat-box:last-child {
   margin-bottom: 0;
 }
 .stat-box .stat-label {
-  color: #222222;
+  color: #444444;
 }
 .stat-box .stat-bar {
+  background-color: #dfdfdf;
   width: 100%;
-  height: 25px;
-  border: solid 2px #8f8f8f;
+  height: 30px;
   position: relative;
   box-sizing: border-box;
-  border-radius: 5px;
+  transition: transform 300ms ease-out;
+}
+.stat-box .stat-bar:hover {
+  transform: scale(1.1);
+  transition: transform 500ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 .stat-box .stat-bar:after {
   content: '';
   color: #ffffff;
   text-align: center;
   background-image: linear-gradient(to top right, #efd248 25%, #ebc619 25%, #ebc619 50%, #efd248 50%, #efd248 75%, #ebc619 75%);
-  background-size: 25px;
+  background-size: 30px;
   background-repeat: repeat-x;
   background-position: 0;
   width: 0;
-  height: 21px;
-  line-height: 23px;
+  height: 30px;
+  line-height: 30px;
   position: absolute;
   text-shadow: 0 -1px #d8b513;
-  transition: width 1s ease-out;
+  transition: width 1750ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 .my-accounts {
-  font-size: 32px;
+  font-size: 40px;
 }
 .my-accounts a {
   margin-right: 10px;
+}
+.my-accounts a i {
+  transition: transform 300ms ease-out;
+}
+.my-accounts a i:hover {
+  transform: scale(1.15);
+  transition: transform 500ms cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
 .acct-twitter {
@@ -116,13 +122,6 @@ body {
 }
 .acct-facebook:hover {
   color: #486cb8;
-}
-
-.acct-google-plus {
-  color: #d64937;
-}
-.acct-google-plus:hover {
-  color: #df7061;
 }
 
 .acct-github {
@@ -647,7 +646,8 @@ body {
 }
 @media (min-width: 580px) {
   .card {
-    width: 540px;
+    width: 580px;
+    margin: 20px;
   }
   .card .card-header {
     width: 40%;
