Changed the game into my profile

--- a/includes/template.html
+++ b/includes/template.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Personal profile of Takane Ichinose. My skills, and my work experience is written here. I'm a web developer, but also interested in making games.">
+    <meta name="description">
     <title>Takane Ichinose | Personal Profile</title>
     <link rel="stylesheet" href="./styles/index.processed.css">
     <script>console.clear();</script>
   </head>
   <body>
     <div id="app"></div>
-    <script>const systemLanguage = "en";</script>
+    <script>const systemLanguage = "";</script>
     <script type="module" src="./scripts/index.processed.js"></script>
   </body>
 </html>
