--- a/includes/template.pug
+++ b/includes/template.pug
@@ -9,6 +9,7 @@ html(lang=lang)
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		meta(name="description" content=description)
 		title Takane Ichinose | Personal Profile
+		link(rel="icon" href="./profile-favicon.ico")
 		link(rel="stylesheet" href="./styles/index.processed.css")
 		script.
 			console.clear();
